<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<version>4.4.0</version>
	<groupId>de.dlr-se.emir</groupId>
	<artifactId>emir</artifactId>
	<name>eMIR-OpenSource</name>
	<packaging>pom</packaging>
	<description>This is the eMIR OpenSource project. This parent pom references all modules initially published to create the eMIR Prototype Display (EPD).</description>
	<url>https://github.com/DLR-SE/epd/</url>
	
	<developers>
		<developer>
			<name>Stefan Behrensen</name>
			<email>stefan.behrensen@dlr.de</email>
		</developer>
		<developer>
			<name>Jan Mentjes</name>
			<email>jan.mentjes@dlr.de</email>
		</developer>
		<developer>
			<name>Daniel Paland</name>
			<email>daniel.paland@dlr.de</email>
		</developer>
		<developer>
			<name>Arne Bokern</name>
			<email>arne.bokern@dlr.de</email>
		</developer>
		<developer>
			<name>Janusz Piotrowski</name>
			<email>janusz.piotrowski@dlr.de</email>
		</developer>
	</developers>

	<contributors>
		<contributor>
			<name>Julius Möller</name>
			<email>julius.moeller@uol.de</email>
		</contributor>
		<contributor>
			<name>Florian Klein</name>
		</contributor>
		<contributor>
			<name>Sören Schweigert</name>
		</contributor>
		<contributor>
			<name>Alexander Oppermann</name>
		</contributor>
		<contributor>
			<name>Volker Gollücke</name>
		</contributor>
	</contributors>
	
	<modules>
		<module>runtime</module>
		<module>model</module>
		<module>services</module>
		<module>epd</module>
	</modules>
	
	<properties>
		<runtime.version>4.4.0</runtime.version>
		<model.version>4.4.0</model.version>
		<services.version>4.4.0</services.version>
		<haggis.version>4.4.0</haggis.version>
		<epd.version>4.4.0</epd.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<maven.require.version>3.6.3</maven.require.version>
		<version.plugin.maven.jar>3.4.2</version.plugin.maven.jar>
		<version.plugin.maven.clean>3.4.0</version.plugin.maven.clean>
		<version.plugin.maven.install>3.1.3</version.plugin.maven.install>
		<version.plugin.maven.compiler>3.13.0</version.plugin.maven.compiler>
		<version.plugin.maven.source>3.0.1</version.plugin.maven.source>
		<version.plugin.maven.site>3.21.0</version.plugin.maven.site>
		<version.plugin.maven.checkstyle>3.5.0</version.plugin.maven.checkstyle>
		<version.plugin.maven.resources>3.3.1</version.plugin.maven.resources>
		<version.plugin.maven.surefire>3.5.0</version.plugin.maven.surefire>
		<version.plugin.maven.enforcer>3.5.0</version.plugin.maven.enforcer>
		<version.plugin.maven.deploy>3.1.3</version.plugin.maven.deploy>
		<version.plugin.maven.shade>3.2.1</version.plugin.maven.shade>
		<version.plugin.maven.assembly>3.7.1</version.plugin.maven.assembly>
		<version.plugin.maven.javadoc>3.11.2</version.plugin.maven.javadoc>
		<version.plugin.maven.project-info-reports>3.7.0</version.plugin.maven.project-info-reports>
		<version.plugin.maven.spotbugs>4.8.6.2</version.plugin.maven.spotbugs>
		<version.plugin.maven.failsafe>3.5.0</version.plugin.maven.failsafe>
		<version.plugin.maven.license>2.4.0</version.plugin.maven.license>
		<junit.version>4.13.2</junit.version>
		<guava.version>33.3.0-jre</guava.version>
		<rxjava.version>3.1.9</rxjava.version>
		<log4j.version>2.24.1</log4j.version>
		<slf4j.version>2.0.16</slf4j.version>
		<geotools.version>32.1</geotools.version>
		<opengis.version>3.0.2</opengis.version>
		<okhttp-version>3.14.9</okhttp-version>
		<jts.version>1.18.2</jts.version>
		<checkstyle.version>10.18.1</checkstyle.version>
		<spotbugs.version>4.8.6</spotbugs.version>
		<umldoclet.version>2.2.0</umldoclet.version>
	</properties>
	
	<licenses>
      <license>
        <name>Apache-2.0</name>
        <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        <distribution>repo</distribution>
        <comments>A business-friendly OSS license</comments>
      </license>
    </licenses>

	<repositories>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>

		<repository>
			<id>EdinburghPH</id>
			<url>https://www2.ph.ed.ac.uk/maven2</url>
		</repository>
		
		<repository>
			<id>osgeo</id>
			<url>https://repo.osgeo.org/repository/release/</url>
		</repository>
	</repositories>
	
	<build>
		<resources>
			<resource>
				<directory>model</directory>
			</resource>

			<resource>
				<directory>src/main/resources</directory>
			</resource>

			<resource>
				<directory>src/test/resources</directory>
			</resource>
			
			<resource>
				<directory>src/site/resources</directory>
			</resource>
		</resources>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${version.plugin.maven.compiler}</version>
				</plugin>

				<plugin>
					<artifactId>maven-jar-plugin</artifactId>
					<version>${version.plugin.maven.jar}</version>
				</plugin>

				<plugin>
					<artifactId>maven-clean-plugin</artifactId>
					<version>${version.plugin.maven.clean}</version>
				</plugin>

				<plugin>
					<artifactId>maven-install-plugin</artifactId>
					<version>${version.plugin.maven.install}</version>
				</plugin>

				<plugin>
					<artifactId>maven-resources-plugin</artifactId>
					<version>${version.plugin.maven.resources}</version>
				</plugin>

				<plugin>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${version.plugin.maven.surefire}</version>
				</plugin>

				<plugin>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>${version.plugin.maven.deploy}</version>
				</plugin>

				<plugin>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>${version.plugin.maven.assembly}</version>
				</plugin>

				<plugin>
					<artifactId>maven-project-info-reports-plugin</artifactId>
					<version>${version.plugin.maven.project-info-reports}</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-enforcer-plugin</artifactId>
					<version>${version.plugin.maven.enforcer}</version>
					<executions>
						<execution>
							<id>enforce-maven</id>
							<goals>
								<goal>enforce</goal>
							</goals>
							<configuration>
								<rules>
									<requireMavenVersion>
										<version>${maven.require.version}</version>
									</requireMavenVersion>
								</rules>
							</configuration>
						</execution>
					</executions>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>${version.plugin.maven.site}</version>
					<dependencies>
						<dependency>
							<groupId>org.apache.maven.doxia</groupId>
							<artifactId>doxia-module-markdown</artifactId>
							<version>2.0.0</version>
						</dependency>
					</dependencies>
				</plugin>

				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>license-maven-plugin</artifactId>
					<version>${version.plugin.maven.license}</version>
					<executions>
						<execution>
							<id>download-licenses</id>
							<goals>
								<goal>download-licenses</goal>
							</goals>
						</execution>
					</executions>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-checkstyle-plugin</artifactId>
					<version>${version.plugin.maven.checkstyle}</version>
					<dependencies>
						<dependency>
							<groupId>com.puppycrawl.tools</groupId>
							<artifactId>checkstyle</artifactId>
							<version>${checkstyle.version}</version>
						</dependency>
					</dependencies>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>${version.plugin.maven.javadoc}</version>
					<executions>
						<execution>
							<id>attach-javadocs</id>
							<goals>
								<goal>jar</goal>
							</goals>
							<configuration>
								<doclint>none</doclint>
							</configuration>
						</execution>
					</executions>
					<configuration>
						<doclet>nl.talsmasoftware.umldoclet.UMLDoclet</doclet>
						<docletArtifact>
							<groupId>nl.talsmasoftware</groupId>
							<artifactId>umldoclet</artifactId>
							<version>${umldoclet.version}</version>
						</docletArtifact>
						<tags>
							<tag>
								<name>generated</name>
								<placement>X</placement>
							</tag>
						</tags>
						<quiet>true</quiet>
						<failOnError>false</failOnError>
					</configuration>
				</plugin>

				<plugin>
					<groupId>com.github.spotbugs</groupId>
					<artifactId>spotbugs-maven-plugin</artifactId>
					<version>${version.plugin.maven.spotbugs}</version>
					<dependencies>
						<dependency>
							<groupId>com.github.spotbugs</groupId>
							<artifactId>spotbugs</artifactId>
							<version>${spotbugs.version}</version>
						</dependency>
					</dependencies>
				</plugin>
				
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-failsafe-plugin</artifactId>
					<version>${version.plugin.maven.failsafe}</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
					<compilerArgs>
						<arg>-proc:full</arg>
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>
	
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>${version.plugin.maven.checkstyle}</version>
				<configuration>
					<configLocation>config/sun_checks_emir.xml</configLocation>
					<propertiesLocation>config/checkstyle_maven.properties</propertiesLocation>
					<encoding>UTF-8</encoding>
					<consoleOutput>false</consoleOutput>
					<failsOnError>false</failsOnError>
					<linkXRef>false</linkXRef>
				</configuration>
			</plugin>

			<plugin>
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs-maven-plugin</artifactId>
				<version>${version.plugin.maven.spotbugs}</version>
				<configuration>
					<xmlOutput>true</xmlOutput>
					<xmlOutputDirectory>target/site</xmlOutputDirectory>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<reportSets>
					<reportSet>
						<id>aggregate</id>
						<inherited>false</inherited>
						<reports>
							<report>aggregate</report>
						</reports>
					</reportSet>
					<reportSet>
						<id>default</id>
						<reports>
							<report>javadoc</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
		</plugins>
	</reporting>
	
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${log4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>${log4j.version}</version>
		</dependency>
	</dependencies>

	<distributionManagement>
		<site>
			<id>emir.website</id>
			<name>eMIR Website</name>
			<url>https://emaritime.de/</url>
		</site>
	</distributionManagement>
</project>
